samples/_failures_safe/1761183616_2d200f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_72a7bd40.c: In function ‘parser_parse_expression’:
./samples/SAFE/__tmp_72a7bd40.c:161:5: error: expected expression at end of input
  161 |     if (
      |     ^~
./samples/SAFE/__tmp_72a7bd40.c:161:5: error: expected declaration or statement at end of input
